# play_mbml_numpyro

./: .gitignore  README.md  environment.yaml  makefile  pyproject.toml
mbml_numpyro/: __init__.py
mbml_numpyro/chapter_02/: data.py  plot.py
notebooks/: Chapter_01_A_Murder_Mystery.ipynb  Chapter_01_A_Murder_Mystery.py  Chapter_02_Assessing_Peoples_Skills.ipynb  Chapter_02_Assessing_Peoples_Skills.py
tests/: test_chapter_02_plot.py
