[tool.poetry]
name = "mbml_numpyro"
version = "0.1.0"
description = ""
authors = ["bdatko <ben.datko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry2conda]
name = "mbml_numpyro"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^2.17.11"
poetry2conda = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
