[tool.poetry]
name = "mbml_numpyro"
version = "0.1.0"
description = ""
authors = ["bdatko <ben.datko@gmail.com>"]

[tool.poetry2conda]
name = "mbml_numpyro"

[tool.poetry2conda.dependencies]
commitizen = { channel = "pip" }
poetry2conda = {channel = "pip" }
black = { channel = "pip" }
pylint = { channel = "pip" }
matplotlib = { channel = "conda-forge"}

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
statsmodels = "^0.12.2"
seaborn = "^0.11.1"
tabulate = "^0.8.9"
nbconvert = "^6.1.0"
arviz = "^0.11.2"
ipykernel = "^6.0.1"
ipython = "^7.25.0"
jupytext = "^1.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^2.17.11"
poetry2conda = "^0.3.0"
black = "^21.6b0"
mypy = "^0.910"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
